--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 <body>
   <header></header>
   <main class="main">
-    <div class="search-field">
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="Search">
+      <button class="btn btn-primary">Search</button>
+    </div>
+
+    <!-- <div class="search-field">
       <div class="search-box">
         <input id="input-field" class="search-field" type="text" />
         <button type="button" class="btn btn-primary search-button" data-toggle="button" aria-pressed="false"
@@ -28,7 +33,8 @@
           Search
         </button>
       </div>
-    </div>
+    </div> -->
+
     <div class="row">
       <div class="col-md-9 col-lg-9 col-sm-7">
         <div id="all-products" class="">
